--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -8,7 +8,7 @@
 <body style="margin-left: 40px;">
     <!-- Header -->
     <h1>Stevie Nicks Encyclopedia Page!</h1>
-    <img src="https://faroutmagazine.co.uk/static/uploads/2019/07/Rare-footage-of-Stevie-Nicks-working-on-Leather-and-Lace-in-the-studio.jpg" style="max-width: 25%; height: auto">
+    <img src="https://faroutmagazine.co.uk/static/uploads/2019/07/Rare-footage-of-Stevie-Nicks-working-on-Leather-and-Lace-in-the-studio.jpg" style="max-width: 25%; height: auto" alt="image of young stevie nicks">
 
     <!-- Table of contents -->
      <h2>Table of Contents</h2>
