--- a/html_midterm/find_errors.html
+++ b/html_midterm/find_errors.html
@@ -25,7 +25,7 @@
 
     <p>This is another paragraph.</p>
     
-    <img src="Image.png" alt="blah">
+    <img src="Image.jpg" alt="blah">
 
     <a href="find_errors_2.html" target="_blank">Click me!</a>
 
@@ -43,7 +43,7 @@
             <td>30</td>
         </tr>
     </table>
-    <img src="error.jpeg" alt="Error Image">
+    <img src="error.jpg" alt="Error Image">
 
    <p>This is a paragraph with <s>strikethrough text.</s></p>
 
