--- a/wa/wa5.html
+++ b/wa/wa5.html
@@ -32,11 +32,11 @@
         </header>
         <article>
           <img src="/img/IMG_7200.jpeg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
-          <p>2340 Folsom St<br>
-             Boulder<br>
-             CO<br>
-             USA<br>
-             80304<br>
+          <p>Hometown: Stamford, CT<br>
+             First car: GMC Sierra 1500<br>
+             Pets?: Yes<br>
+             Type: Cats<br>
+             Named?: Brad & Luna<br>
             <strong>Tel</strong>: 914-413-1346<br>
             <strong>Mail</strong>: isco9616@colorado.edu</p>
         </article>
