--- a/wa/wa10/wa10.html
+++ b/wa/wa10/wa10.html
@@ -8,6 +8,8 @@
 
     <style>
       body {
+        display: block;
+        margin: auto;
         font-family: "Lexend Deca", sans-serif;
         font-optical-sizing: auto;
         font-style: normal;
@@ -21,6 +23,7 @@
       }
 
       div {
+        padding-top: 10px;
         padding-bottom: 20px;
       }
 
