--- a/js_project/index.html
+++ b/js_project/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <div id="grid">
-        <div class="space" id="1_1"></div>
-        <div class="space" id="1_2"></div>
-        <div class="space" id="1_3"></div>
-        <div class="space" id="2_1"></div>
-        <div class="space" id="2_2"></div>
-        <div class="space" id="2_3"></div>
-        <div class="space" id="3_1"></div>
-        <div class="space" id="3_2"></div>
-        <div class="space" id="3_3"></div>
+        <div class="space" id="a_1"></div>
+        <div class="space" id="a_2"></div>
+        <div class="space" id="a_3"></div>
+        <div class="space" id="b_1"></div>
+        <div class="space" id="b_2"></div>
+        <div class="space" id="b_3"></div>
+        <div class="space" id="c_1"></div>
+        <div class="space" id="c_2"></div>
+        <div class="space" id="c_3"></div>
+
     </div>
 </body>
 <script src="/js_project/game.js"></script>
