--- a/js_project/index.html
+++ b/js_project/index.html
@@ -8,15 +8,43 @@
 </head>
 <body>
     <div id="grid">
-        <div class="space" id="a_1"></div>
-        <div class="space" id="a_2"></div>
-        <div class="space" id="a_3"></div>
-        <div class="space" id="b_1"></div>
-        <div class="space" id="b_2"></div>
-        <div class="space" id="b_3"></div>
-        <div class="space" id="c_1"></div>
-        <div class="space" id="c_2"></div>
-        <div class="space" id="c_3"></div>
+        <!-- <div class="space" id="a_1">
+            <button type="button" class="ex"></button>
+        </div>
+        <div class="space" id="a_2">
+            <button type="button" class="ex"></button>
+        </div>
+        <div class="space" id="a_3">
+            <button type="button" class="ex"></button>
+        </div>
+        <div class="space" id="b_1">
+            <button type="button" class="ex"></button>
+        </div>
+        <div class="space" id="b_2">
+            <button type="button" class="ex"></button>
+        </div>
+        <div class="space" id="b_3">
+            <button type="button" class="ex"></button>
+        </div>
+        <div class="space" id="c_1">
+            <button type="button" class="ex"></button>
+        </div>
+        <div class="space" id="c_2">
+            <button type="button" class="ex"></button>
+        </div>
+        <div class="space" id="c_3">
+            <button type="button" class="ex"></button>
+        </div> -->
+        <button type="button" class="ex"></button>
+        <button type="button" class="ex"></button>
+        <button type="button" class="ex"></button>
+        <button type="button" class="ex"></button>
+        <button type="button" class="ex"></button>
+        <button type="button" class="ex"></button>
+        <button type="button" class="ex"></button>
+        <button type="button" class="ex"></button>
+        <button type="button" class="ex"></button>
+
 
     </div>
 </body>
