--- a/js_project/index.html
+++ b/js_project/index.html
@@ -8,33 +8,7 @@
 </head>
 <body>
     <div id="grid">
-        <!-- <div class="space" id="a_1">
-            <button type="button" class="ex"></button>
-        </div>
-        <div class="space" id="a_2">
-            <button type="button" class="ex"></button>
-        </div>
-        <div class="space" id="a_3">
-            <button type="button" class="ex"></button>
-        </div>
-        <div class="space" id="b_1">
-            <button type="button" class="ex"></button>
-        </div>
-        <div class="space" id="b_2">
-            <button type="button" class="ex"></button>
-        </div>
-        <div class="space" id="b_3">
-            <button type="button" class="ex"></button>
-        </div>
-        <div class="space" id="c_1">
-            <button type="button" class="ex"></button>
-        </div>
-        <div class="space" id="c_2">
-            <button type="button" class="ex"></button>
-        </div>
-        <div class="space" id="c_3">
-            <button type="button" class="ex"></button>
-        </div> -->
+        <!-- <button type="button" class="ex"></button>
         <button type="button" class="ex"></button>
         <button type="button" class="ex"></button>
         <button type="button" class="ex"></button>
@@ -42,11 +16,9 @@
         <button type="button" class="ex"></button>
         <button type="button" class="ex"></button>
         <button type="button" class="ex"></button>
-        <button type="button" class="ex"></button>
-        <button type="button" class="ex"></button>
-
-
+        <button type="button" class="ex"></button> -->
     </div>
+
 </body>
 <script src="/js_project/game.js"></script>
 </html>
